# demo.Web.Host/docs/swagger.json
@@ -85,6 +85,21 @@
                 "responses": {}
             }
         },
+        "/name": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Index 依赖注入相关"
+                ],
+                "summary": "获取最新age",
+                "responses": {}
+            }
+        },
         "/rate": {
             "get": {
                 "consumes": [
